--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 sudo: false
 cache: pip
-dist: trusty
+dist: xenial
 install:
   - pip install coveralls>=1.1 tox
 # command to run tests
