morre test stuff

--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,12 @@ envlist = py{36}-dj{20}
 
 [testenv]
 setenv =
-    DJANGO_SETTINGS_MODULE = test_settings
+    DJANGO_SETTINGS_MODULE = tests.test_settings
 basepython =
     py36: python3.6
 deps=
     dj20: Django>=2.0,<3.0
-    py37: https://github.com/yaml/pyyaml/zipball/master#egg=pyyaml
-    py37: https://github.com/celery/kombu/zipball/master#egg=kombu
 install_command = pip install -e ".[testing]" -U {opts} {packages}
-commands=django-admin.py test
+commands =
+    coverage run runtests.py -v 2
+    coverage report -m
