--- a/tox.ini
+++ b/tox.ini
@@ -12,5 +12,6 @@ deps=
     dj20: Django>=2.0,<3.0
 install_command = pip install -e ".[testing]" -U {opts} {packages}
 commands =
-    coverage run runtests.py -v 2
+    pip freeze
+    coverage run runtests.py -v 3
     coverage report -m
