--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,11 @@ envlist = py{36}-dj{20}
 
 [testenv]
 setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/tests
     DJANGO_SETTINGS_MODULE = tests.test_settings
-basepython =
-    py36: python3.6
-deps=
-    dj20: Django>=2.0,<3.0
+
 install_command = pip install -e ".[testing]" -U {opts} {packages}
+
 commands =
     pip freeze
     coverage run runtests.py -v 3
