--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
-skipsdist = True
+skipsdist = False
 usedevelop = True
-envlist = py{36}-dj{20}
+envlist = py36
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/tests
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
-install_command = pip install -e ".[testing]" -U {opts} {packages}
+install_command = pip install -e . -U {opts} {packages}
 
 commands =
     pip freeze
