--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ envlist = py36
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
+requires = coverage
+
 install_command = pip install -e . -U {opts} {packages}
 
 commands =
