--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ envlist = py36
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
-requires = coverage
+deps=
+    py36: coverage
 
 install_command = pip install -e . -U {opts} {packages}
 
