--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py36
 
 [testenv]
 setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/corpstats
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
 deps=
@@ -14,5 +15,6 @@ install_command = pip install -e . -U {opts} {packages}
 
 commands =
     pip freeze
-    coverage run runtests.py -v 3
+    coverage run runtests.py
     coverage report -m
+
