--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,14 @@ envlist = py36
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/corpstats
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
 deps=
     py36: coverage
 
-install_command = pip install -e . -U {opts} {packages}
+install_command = pip install -e ".[testing]" -U {opts} {packages}
 
 commands =
     pip freeze
     coverage run runtests.py
     coverage report -m
-
