add show all, remove alliance

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ setenv =
 
 deps=
     py36: coverage
+    py36: allianceauth
 
 install_command = pip install -e ".[testing]" -U {opts} {packages}
 
